# HitmanAbsolutionSDK

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HMA.ini  HitmanAbsolutionSDK.ini  README.md  launch.vs.json  vcpkg.json
DirectInputProxy/: CMakeLists.txt
DirectInputProxy/modules/: DInput8.def
DirectInputProxy/src/: DirectInputProxy.cpp
HitmanAbsolutionSDK/: CMakeLists.txt
HitmanAbsolutionSDK/include/: Common.h  Function.h  Global.h  Hash.h  Hook.h  Hooks.h  Logger.h  ModInterface.h  ModManager.h  Mutex.h  Reflection.h  ResourcePatcher.h  SDK.h
HitmanAbsolutionSDK/include/Connection/: PipeServer.h  SharedMemoryServer.h
HitmanAbsolutionSDK/include/Glacier/: EActorDeathType.h  ECheckpointGameMode.h  EPlayMode.h  IComponentInterface.h  ISharedPointerTarget.h  IType.h  SBodyPartDamageMultipliers.h  SGameUpdateEvent.h  SSceneParameters.h  STokenID.h  ZActor.h  ZApplicationEngineWin32.h  ZBitArray.h  ZCharacterTemplateAspect.h  ZCurve.h  ZDelegate.h  ZEngineAppCommon.h  ZGameLoopManager.h  ZGameTime.h  ZGameTimeManager.h  ZGraphicsSettingsManager.h  ZHM5BaseCharacter.h  ZHitman5.h  ZLevelManager.h  ZMutex.h  ZObjectRef.h  ZPinFunctor.h  ZSharedPointerTarget.h  ZString.h  ZStringBuilder.h  ZThread.h  ZTokenIDEntity.h  ZVariantRef.h
HitmanAbsolutionSDK/include/Glacier/AI/: ZSharedKnowledgeRef.h
HitmanAbsolutionSDK/include/Glacier/Action/: EActionType.h  ZHM5Action.h  ZHM5ActionManager.h
HitmanAbsolutionSDK/include/Glacier/Actor/: EActorCCPreset.h  EActorType.h  SActorSoundDefs.h  ZActor.h  ZActorManager.h  ZHM5CCProfile.h
HitmanAbsolutionSDK/include/Glacier/Camera/: SRenderViewport.h  ZCameraEntity.h  ZFreeCameraControlEntity.h  ZHM5MainCamera.h
HitmanAbsolutionSDK/include/Glacier/CheckPoint/: ZCheckPointManager.h  ZCheckPointManagerEntity.h
HitmanAbsolutionSDK/include/Glacier/Configuration/: ZConfigCommand.h  ZConfigFloat.h  ZConfigFloatBase.h  ZConfigInt.h  ZConfigIntBase.h
HitmanAbsolutionSDK/include/Glacier/ContentKit/: ZContentKitEntity.h  ZContentKitList.h  ZContentKitManager.h  ZFireArmKitEntity.h  ZGlobalOutfitKit.h  ZOutfitKitEntity .h  ZOutfitKitEntity.h  ZPropKitEntity.h  ZShadowContentKitList.h
HitmanAbsolutionSDK/include/Glacier/Engine/: IApplication.h  IIniFile.h  ZApplicationBase.h  ZApplicationEngineWin32.h  ZEngineAppCommon.h  ZIniFile.h  ZWin32ApplicationBase.h  ZWin32ApplicationStub.h
HitmanAbsolutionSDK/include/Glacier/Entity/: EPropertyInfoFlags.h  IEntity.h  IEntityBlueprintFactory.h  IEntityFactory.h  IReusableProp.h  SEntityTemplateEntitySubset.h  SEntityTemplatePinConnection.h  SEntityTemplatePropertyAlias.h  SEntityTemplateReference.h  SExposedEntityData.h  SInterfaceData.h  SPinData.h  SPinInfo.h  SPropertyData.h  SPropertyInfo.h  SSubsetData.h  STemplateEntityBlueprint.h  STemplateSubEntityBlueprint.h  ZEntityImpl.h  (+16 more)
HitmanAbsolutionSDK/include/IO/: BinaryReader.h  BinaryWriter.h  InputFileStream.h  InputMemoryStream.h  OutputFileStream.h  OutputMemoryStream.h  SeekOrigin.h
HitmanAbsolutionSDK/include/Menu/: EntityMenu.h  PlayerMenu.h
HitmanAbsolutionSDK/include/Registry/: EnumRegistry.h  PropertyRegistry.h  ResourceIDRegistry.h
HitmanAbsolutionSDK/include/Renderer/: DirectXRenderer.h  ImGuiRenderer.h
HitmanAbsolutionSDK/include/Resource/: DynamicHeaderLibraryGenerator.h
HitmanAbsolutionSDK/include/UI/: MainMenu.h  ModSelector.h  Settings.h
HitmanAbsolutionSDK/include/Utility/: Alignment.h  MathUtility.h  MemoryUtility.h  MinHookUtility.h  ResourceUtility.h  StringUtility.h
HitmanAbsolutionSDK/src/: Global.cpp  Hash.cpp  Logger.cpp  ModInterface.cpp  ModManager.cpp  ResourcePatcher.cpp  SDK.cpp  dllmain.cpp
HitmanAbsolutionSDK/src/Connection/: PipeServer.cpp  SharedMemoryServer.cpp
HitmanAbsolutionSDK/src/Glacier/: STokenID.cpp  ZActor.cpp  ZApplicationEngineWin32.cpp  ZCharacterTemplateAspect.cpp  ZEngineAppCommon.cpp  ZGameLoopManager.cpp  ZGameTime.cpp  ZGameTimeManager.cpp  ZGraphicsSettingsManager.cpp  ZHitman5.cpp  ZLevelManager.cpp  ZString.cpp  ZStringBuilder.cpp  ZThread.cpp  ZTokenIDEntity.cpp
HitmanAbsolutionSDK/src/IO/: BinaryReader.cpp  BinaryWriter.cpp  InputFileStream.cpp  InputMemoryStream.cpp  OuputFileStream.cpp  OutputMemoryStream.cpp
HitmanAbsolutionSDK/src/Menu/: PlayerMenu.cpp
HitmanAbsolutionSDK/src/Registry/: EnumRegistry.cpp  PropertyRegistry.cpp  ResourceIDRegistry.cpp
HitmanAbsolutionSDK/src/Renderer/: DirectXRenderer.cpp  ImGuiRenderer.cpp  ZSpatialEntity.cpp
HitmanAbsolutionSDK/src/Resource/: DynamicHeaderLibraryGenerator.cpp
HitmanAbsolutionSDK/src/UI/: MainMenu.cpp  ModSelector.cpp  Settings.cpp
HitmanAbsolutionSDK/src/Utility/: MemoryUtility.cpp  ResourceUtility.cpp  StringUtility.cpp
Mods/Actors/: CMakeLists.txt
Mods/Actors/include/: Actors.h
Mods/Actors/src/: Actors.cpp
Mods/Editor/: CMakeLists.txt
Mods/Editor/include/: Editor.h
Mods/Editor/src/: Editor.cpp
Mods/Items/: CMakeLists.txt
Mods/Items/include/: Items.h
Mods/Items/src/: Items.cpp
Mods/Player/: CMakeLists.txt
Mods/Player/include/: Player.h
Mods/Player/src/: Player.cpp
(+304 files in other folders)
